--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "cyanid",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "CSS flexbox grid and layout toolbox",
   "main": "index.html",
   "scripts": {
+    "dev": "NODE_ENV=development webpack-dev-server --open --profile --progress",
+    "watch": "NODE_ENV=development webpack --watch --profile --progress",
+    "build": "NODE_ENV=production webpack",
+    "build-dev": "NODE_ENV=development webpack --profile --progress",
+    "prod": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,14 +18,52 @@
   "keywords": [
     "CSS",
     "Sass",
-    "Flexbox",
+    "Responsive",
     "Grid",
-    "Responsive"
+    "Layout",
+    "Flexbox"
   ],
   "author": "Nicolas Giethlen",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Chmood/cyanid/issues"
   },
-  "homepage": "https://github.com/Chmood/cyanid#readme"
+  "homepage": "https://github.com/Chmood/cyanid#readme",
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^4.2.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "cssnano": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
